Kubernetes ingress vs Istio ingress gateway/istio-ingress-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: httpbin-istio-ingress-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: httpbin-istio-ingress-gateway-vs
spec:
  hosts:
    - "*"
  gateways:
    - httpbin-istio-ingress-gateway
  http:
    - match:
        - uri:
            prefix: /
          headers:
              x-password:
                exact: password
      route:
        - destination:
            host: httpbin-service
            port:
              number: 80
          headers:
            response:
              add:
                hello: response-header
            request:
              add:
                hello: request-header
